Added database script and spring actuator. Also modified security so hello is available with a sign in link

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_playground?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.maxActive=5
 spring.datasource.maxIdle=2
@@ -6,4 +7,5 @@ spring.datasource.maxWait=1000
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=select 1
 
-security.userbyusername.sql=
+security.userbyusername.sql=SELECT user_name, password, active FROM spring_users where user_name = ?
+
