Added custom cookie naming for remember me cookie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.datasource.maxWait=1000
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=select 1
 
-security.userbyusername.sql=SELECT user_name, password, active FROM spring_users where user_name = ?
+security.userByUsername.sql=SELECT user_name, password, active FROM spring_users where user_name = ?
 
+security.rememberMe.cookieName=test-remember
